--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mozilla/readability": "^0.4.4",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^22.0.0",
     "langchain": "^0.0.75",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "rss-parser": "^3.13.0"
   }
 }
