--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsdom": "^22.0.0",
     "langchain": "^0.0.75",
+    "mongoose": "^7.3.0",
     "openai": "^3.2.1",
     "rss-parser": "^3.13.0"
   }
